# teoria-eda

./: Readme.md
CLionProjects/Algorithms/: CMakeLists.txt  binary.cpp  binary.h  binary_search.cpp  binary_search.h  cadenes.cpp  cadenes.h  crazy_quim_sort_algorithm.cpp  crazy_quim_sort_algorithm.h  exponentiation.cpp  exponentiation.h  main.cpp  mergesort.cpp  mergesort.h  motxilla.cpp  motxilla.h  n_reines.cpp  n_reines.h  permutacions.cpp  permutacions.h  prime.cpp  prime.h  quadrats_llatins.cpp  quadrats_llatins.h  quickselect.h  quicksort.h  resistant_search.cpp  resistant_search.h  salts_cavall.cpp  salts_cavall.h  unimodality.cpp  unimodality.h  utils.h
CLionProjects/Exams/: CMakeLists.txt  Pos.h  dist2furthest_treasure.cpp  dist2furthest_treasure.h  main.cpp  peaceful_kings.cpp  peaceful_kings.h  utils.cpp  utils.h
CLionProjects/GraphAlgorithms/: CMakeLists.txt  bfs.cpp  bfs.h  dfs.cpp  dfs.h  dijkstra.cpp  dijkstra.h  forest.cpp  forest.h  graphIOchar.cpp  graphIOchar.h  graphInput.txt  main.cpp  painting_a_board.cpp  painting_a_board.h  treasure_graph.cpp  treasure_graph.h  treasures_map.cpp  treasures_map.h  two_colors.cpp  two_colors.h  utils.h  weightedGraphIOint.cpp  weightedGraphIOint.h  zamburguesas.cpp  zamburguesas.h
CLionProjects/Lab1/: CMakeLists.txt  bag_of_words.cc  casino.cc  collatz_conjecture.cc  collection_numbers.cc  dynamic_median.cc  longest_sequence.cc  role_classification.cc  statistical_measures.cc
