cmake_minimum_required(VERSION 3.21)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithms main.cpp mergesort.h utils.h quicksort.h binary_search.cpp binary_search.h mergesort.cpp exponentiation.cpp exponentiation.h unimodality.cpp unimodality.h crazy_quim_sort_algorithm.cpp crazy_quim_sort_algorithm.h resistant_search.cpp resistant_search.h binary.cpp binary.h prime.cpp prime.h cadenes.cpp cadenes.h permutacions.cpp permutacions.h quadrats_llatins.cpp quadrats_llatins.h n_reines.cpp n_reines.h salts_cavall.cpp salts_cavall.h motxilla.cpp motxilla.h quickselect.h)
